# nix-rust-for-python-template

./: .gitignore  Cargo.toml  README.md  example.py  flake.nix  pyproject.toml
.github/workflows/: ci.yml
src/: lib.rs
